# Unadaptable-Foundation-Models

./: .gitignore  LICENSE  README.md  cli.py  config.py  constants.py  data.py  main.py  metrics.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  sbatch_run  sbatch_run_test  settings.py  setup.sh  test.py  test_data.py  test_fine_tuning.py  unadapt.py  utils.py
configs/: base_config.yaml  mnist.yaml  mnist_baseline.yaml  mnist_prune.yaml  pythia_baseline.yaml  wandb_sample.yaml
configs/countermeasure/: add_layer.yaml
configs/experiment/: mnist_sweep.yaml  sweep_example.yaml
configs/finetune/: cyber.yaml  example_hf.yaml  fashion.yaml
configs/finetune/training_args/: quick_baseline.yaml
configs/pretrain/: mnist.yaml
configs/unadapt/: gradient.yaml  prune.yaml
src/ufm/: countermeasures.py  data.py  fine_tuning.py  finetuning.py  metrics.py  models.py  pretrain.py  pretrain_score.py  test_data.py  unadapt.py  utils.py
src/ufm/wandb/: latest-run
src/ufm/wandb/run-20240419_143353-r1gesw29/: run-r1gesw29.wandb
src/ufm/wandb/run-20240419_143353-r1gesw29/files/: config.yaml  wandb-metadata.json
src/ufm/wandb/run-20240419_144622-td7coa2e/: run-td7coa2e.wandb
src/ufm/wandb/run-20240419_144622-td7coa2e/files/: config.yaml  wandb-metadata.json
src/ufm/wandb/run-20240419_144732-5ws3o9bv/: run-5ws3o9bv.wandb
src/ufm/wandb/run-20240419_144732-5ws3o9bv/files/: conda-environment.yaml  config.yaml  requirements.txt  (+1 more)
tests/: test_data.py  test_fine_tuning.ipynb
toy_models/: chart_utils.py  mnist_pruning.ipynb  scalar_intuition.py
